--- a/src/uqmc/theme/static/css/public.css
+++ b/src/uqmc/theme/static/css/public.css
@@ -109,10 +109,6 @@ sub {
     z-index: 4;
 }
 
-#portal-footer {
-    z-index: 3;
-}
-
 #portal-logo {
     font-family: MuseoSlab500Regular;
     margin-top: 5px;
